fixed readme and descriptions

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bellows-app/plugin-inertia-server-side-rendering",
-    "description": "An intelligent command line utility that sits on top of Laravel Forge to get your site up and running with all of your third party integrations configured at the speed of light.",
+    "description": "Bellows plugin for integrating Inertia SSR into your app.",
     "keywords": [
         "laravel",
         "console",
